samples/_failures_safe/1761244236_4dfe5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96ced7e3.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_96ced7e3.c:176:35: error: missing terminating " character
  176 |         case TOKEN_STRING: return "STRING
      |                                   ^~~~~~~
./samples/SAFE/__tmp_96ced7e3.c:176:9: error: expected expression at end of input
  176 |         case TOKEN_STRING: return "STRING
      |         ^~~~
./samples/SAFE/__tmp_96ced7e3.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96ced7e3.c:176:9: error: expected declaration or statement at end of input
